# ry

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.Rmd  README.md  ROADMAP.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  ecosystem.yml  release.yml  typeshed-bump.yml
crates/ry-checker/: Cargo.toml
crates/ry-checker/benches/: performance.rs
crates/ry-checker/src/: collect.rs  diagnostics.rs  format.rs  higher_order.rs  lib.rs  nse.rs  packages.rs  project.rs  rules.rs  suppress.rs  tests.rs
crates/ry-checker/src/infer/: binop.rs  call.rs  construct.rs  index.rs  misc.rs  mod.rs  pipe.rs
crates/ry-checker/testdata/: err_ambiguous_partial_argument.R  err_argument_list_type_mismatch.R  err_argument_type_mismatch.R  err_call_literal.R  err_call_non_function.R  err_compare_mode_mismatch.R  err_dollar_assign_atomic.R  err_dollar_on_atomic.R  err_fnbody_arith.R  err_fnbody_nested_if.R  err_fnbody_unbound.R  err_ho_callback_unbound.R  err_ho_sapply_infers_type.R  err_if_expr_join.R  err_impossible_standalone_guard.R  err_is_null_narrowing_no_leak.R  err_lapply_double_bracket.R  err_missing_required_argument.R  err_parse_error.R  err_partial_column_indexed_assignment.R  err_purrr_map_dbl_type_mismatch.R  err_scalar_logical.R  err_switch_mixed.R  err_union_all_invalid.R  err_unknown_argument.R  err_user_fn_missing_required.R  ok_ambient_globals.R  ok_anon_lapply.R  ok_argument_diagnostics_suppressed.R  ok_argument_numeric_coercion.R  ok_argument_union_overlap.R  ok_arith.R  ok_assertion_refinement.R  ok_assign_literal.R  ok_block_expr_scope.R  ok_bound_var.R  ok_branch_binding_merge.R  ok_c_concat.R  ok_call_function.R  ok_call_skips_nonfunction_shadow.R  (+162 more)
crates/ry-checker/testdata/oracle/: argument_type_mismatch.R  arith_character.R  call_non_function.R  closure_counter.R  coercion_arith.R  coercion_c.R  colon_descending.R  colon_fractional.R  colon_neg.R  compare_na.R  discarded_conditional_value.R  dollar_list.R  dollar_missing.R  dollar_on_atomic.R  double_subset.R  factor_arithmetic.R  for_loop.R  function_default.R  identical_list_subset_scalar.R  if_numeric.R  impossible_standalone_guard.R  lapply_use.R  list_append.R  list_atomic_comparison.R  matrix_mul.R  mean_of_c.R  mirai_daemons.R  missing_required_argument.R  named_args.R  null_in_list.R  null_plus_character.R  out_of_bounds_subset.R  paste_collapse.R  plain_list_arithmetic.R  purrr_in_parallel.R  purrr_map_use.R  raw_arithmetic.R  raw_unary_minus.R  recycle_short.R  rep_each.R  (+17 more)
crates/ry-checker/tests/: corpus.rs  oracle.rs  perf.rs  project.rs  real_world.rs  vendor_snapshot.rs
crates/ry-checker/tests/snapshots/: real_world__snapshot_base_mean_default.snap  real_world__snapshot_coercion_ladder.snap  real_world__snapshot_loop_with_accumulator.snap  real_world__snapshot_mtcars_dataset.snap  real_world__snapshot_na_propagation.snap  real_world__snapshot_pipe_subset_nse.snap  real_world__snapshot_s3_dispatch.snap  real_world__snapshot_tidyverse_pipe.snap  real_world__snapshot_vectorized_op.snap  vendor_snapshot__glue_vendor.snap  vendor_snapshot__purrr_vendor.snap
crates/ry-cli/: Cargo.toml
crates/ry-cli/src/: color.rs  config.rs  main.rs  package_metadata.rs
crates/ry-cli/tests/: config_e2e.rs  typeshed_e2e.rs
crates/ry-core/: Cargo.toml
crates/ry-core/src/: ast.rs  lib.rs  parser.rs  span.rs  types.rs
crates/ry-core/tests/: parser_correctness.rs
crates/ry-lsp/: Cargo.toml
crates/ry-lsp/src/: backend.rs  diagnostics.rs  folding.rs  hints.rs  ident.rs  lib.rs  navigation.rs  selection.rs  symbols.rs  tests.rs  util.rs
crates/ry-typeshed/: Cargo.toml
crates/ry-typeshed/data/: base.json  base_r.json  bayes.json  dplyr.json  mirai.json  purrr.json  survival.json  testthat.json
crates/ry-typeshed/src/: lib.rs
docs/audits/: brms-check-2026-07-10.md  improvement-results-2026-07-11.md
docs/plans/: 01-checker-module-split.md  02-r-typeshed-repo-bootstrap.md  03-runtime-typeshed-loading.md  04-data-driven-package-semantics.md  05-param-types-and-arg-checking.md  06-performance.md  07-distribution-and-ecosystem-ci.md  08-depython-r-typeshed.md  09-misparenthesization-rule-family.md  10-scan-context-modeling.md  11-nse-embrace-and-data-pronoun.md  12-confidence-tiers-and-baseline.md  13-s4-modeling.md  14-scope-flow-fixes.md  15-lazy-default-reachability.md  16-typeshed-nse-registry-and-r-generator.md  17-derive-hardcoded-semantics.md  18-nse-alias-tracking.md  19-fp-cluster-wins.md  20-residual-fp-fixes.md  21-tidyverse-nse-derivation.md  22-mask-type-safety-and-defused-dots.md  23-rcpp-and-tinytest.md
ecosystem/: batch6_ry010_analysis.md  diff.sh  packages.txt  run.sh
ecosystem/reports/: SUMMARY.md  cli.txt  curl.txt  dplyr.txt  forcats.txt  jsonlite.txt  lubridate.txt  purrr.txt  rlang.txt  scales.txt  stringr.txt  testthat.txt  tidyr.txt  withr.txt
examples/: smoke.R
scripts/: audit_typeshed.R  gen_typeshed.R  oracle.sh  oracle_driver.R  sync_typeshed.sh
