[workspace]
resolver = "2"
members = [
    "crates/ry-core",
    "crates/ry-checker",
    "crates/ry-typeshed",
    "crates/ry-cli",
    "crates/ry-lsp",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/ry"
authors = ["ry contributors"]

[workspace.dependencies]
# parsing
tree-sitter = "0.25"
tree-sitter-r = "1.3"
# error plumbing
thiserror = "1"
miette = { version = "7", features = ["fancy"] }
# cli
clap = { version = "4", features = ["derive"] }
# misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
