[workspace]
resolver = "2"
members = [
    "crates/ry-core",
    "crates/ry-checker",
    "crates/ry-typeshed",
    "crates/ry-cli",
    "crates/ry-lsp",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/sims1253/ry"
authors = ["Maximilian Scholz"]

[workspace.dependencies]
# parsing
tree-sitter = "0.26"
tree-sitter-r = "1.3"
# error plumbing
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
# cli
clap = { version = "4", features = ["derive"] }
clap_complete = "4.6.7"
# misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = "1"
toml = "1.1.2"
glob = "0.3"
tempfile = "3"
insta = { version = "1.48.0", features = ["yaml"] }
# parallelism (Project::check pass 3 + CLI parsing)
rayon = "1"
# Static inventory of R serialized data files (never evaluates R code).
rds2rust = "0.1.41"
bzip2 = "0.6"
flate2 = "1"
xz2 = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1

# Profile cargo-dist builds release artifacts with.
[profile.dist]
inherits = "release"
