[package]
name = "ry-checker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ry-core = { path = "../ry-core" }
ry-typeshed = { path = "../ry-typeshed" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
