[package]
name = "ry-checker"
description = "The ry static analyzer: statement/expression checking and diagnostics for R."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ry-core = { path = "../ry-core" }
ry-typeshed = { path = "../ry-typeshed" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { version = "1.48.0", features = ["yaml"] }
