[package]
name = "ry-cli"
description = "Command-line interface for ry, a static analyzer for R."
keywords = ["r", "linter", "static-analysis", "type-checker"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ry"
path = "src/main.rs"

[dependencies]
ry-core = { path = "../ry-core" }
ry-checker = { path = "../ry-checker" }
ry-typeshed = { path = "../ry-typeshed" }
ry-lsp = { path = "../ry-lsp" }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Only the runtime pieces needed to drive the async LSP server from a
# synchronous `fn main()`. We do NOT pull in the full `tokio` feature
# set here (the ry-lsp crate does that itself).
tokio = { workspace = true, features = ["rt-multi-thread", "io-std"] }
# Parallel file parsing. tree-sitter parsers are not
# `Send`, so the parse loop uses a rayon thread-local parser pool.
rayon = { workspace = true }
rds2rust = { workspace = true }
bzip2 = { workspace = true }
flate2 = { workspace = true }
xz2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
