[package]
name = "ry-core"
description = "Core types, parser, and inference primitives for ry, a static analyzer for R."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-r = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
