[package]
name = "ry-typeshed"
description = "Type signatures for R builtins and packages, used by the ry analyzer."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "src/lib.rs"
